tests/fixtures/invalid/divmod_bytes_list.py
# Cannot call divmod() with Bytes, List[int]
x = divmod(b"hello", [1, 2, 3])
